fixing_z-index_bug

--- a/src/pages/NurseryDocuments/components/DocApply/components/StageStrip/index.scss
+++ b/src/pages/NurseryDocuments/components/DocApply/components/StageStrip/index.scss
@@ -101,7 +101,6 @@
 .stage-item__icon svg {
     width: 26px;
     height: 26px;
-    z-index: 1;
 }
 .stage-item__icon svg path {
     fill: white;
